# Parallel-programming

lab1/matrix_multiplication/: CMakeLists.txt
lab1/matrix_multiplication/data/: result_text_programm.txt
lab1/matrix_multiplication/include/: matrix_utils.h
lab1/matrix_multiplication/src/: main.cpp  matrix_multiplier.cpp
